# jordan

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  ruff.toml  troubleshooting.md
.github/workflows/: ci-android.yml  ci-java.yml  ci-python.yml  ci.yml  release-android.yml  release-cli-python.yml  release-library-python.yml  release-server.yml
app/: privacy.md
app/android/: README.md  build.gradle  settings.gradle
app/android/app/: build.gradle  proguard-rules.pro
app/cli/: README.md  jordan_cli.py  jordan_cli.yml
app/cli/test/: 2_produce_stdouts.py  3_produce_continue_stdouts.py  4_indefinitely_write_stdout.py  5_progress_bar.py
libraries/cli/: README.md  pyproject.toml
libraries/cli/jordan_cli/: admin.py  cli.py
libraries/cli/tests/: test_admin.py  test_cli.py
libraries/java/: README.md  class_diagram.md  settings.gradle
libraries/java/jordan-client/: README.md  build.gradle
libraries/java/jordan-core/: README.md  build.gradle
libraries/prototype/: contract.md
libraries/python/: jordan.py
libraries/python/jordan_py/: LICENSE  README.md  README.txt  pyproject.toml  setup.py
libraries/python/jordan_py/jordan_py/: jordan.py
libraries/python/jordan_py/jordan_py/test/: test_jordan.py
sample/: 01-simple-message-status.py  02-custom-actions.py  03-async.py  04-multi-tasks.py
server/: .env.example  README.md  api.py  jordan_constants.py  jordan_log.py  jordan_server.py  mock.py  rejson_interface.py  requirements.txt
server/aws_lambda/create_secrets/: template.yml
server/aws_lambda/jordan-server/: README.md  (+2 more)
server/create_secrets/: samconfig.toml
server/jordan-server/: template.yaml
server/tests/: conftest.py  test_api.py
(+174 files in other folders)
